more changes to fix minor layout problems

--- a/web/src/less/search.less
+++ b/web/src/less/search.less
@@ -79,6 +79,7 @@
 
             a {
               color: @filter-body-link-colour;
+              white-space: nowrap;
             }
           }
         }
