--- a/web/src/less/style-eidc.less
+++ b/web/src/less/style-eidc.less
@@ -71,6 +71,9 @@ body {
     background-color: black;
     color: white;
   }
+  img {
+    margin: 9px 0;
+  }
 }
 
 .adminToolbar {
@@ -222,7 +225,7 @@ h1#document-title {
 
   .navbar-fixed-top {
     top: 0;
-    border-width: 0 0 1px;
+    border-width: 0 0 @navbar-border-width 0;
   }
 
   .navbar-collapse.collapse {
